# UtaiSynthesizer

./: .gitignore  NOTICE.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  config.json  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
converter/: convert.py  export_diffusion.py  export_nsf_hifigan.py  extract_index.py  onnx_fp16.py  requirements.txt
converter/architectures/: bs_roformer.py  htdemucs.py  mdx23c.py  mel_band_roformer.py  msst_yaml.py  nsf_hifigan_gen.py  rvc_v2.py  sovits_diffusion.py  sovits_v4.py  sovits_v4v2.py
converter/verify/: README.md  overlap_ab_check.py
converter/verify/fp16/: check_fp16_graph.py  dml_smoke.py  minimal_norm_repro.py  nan_bisect.py
converter/verify/training/: README.md  gate0_compare.py  gate0_diff_compare.py  gate0_diff_orig.py  gate0_diff_prepare.py  gate0_diff_run_ours.py  gate0_run_ours.py  gate0_sovits_compare.py  gate0_sovits_run_ours.py  gate0_sovits_v2_c_resample.py  gate0_sovits_v2_compare.py  gate0_sovits_v2_orig.py  gate0_sovits_v2_run_ours.py  gate0_vocoder.py  gate0b_parselmouth_xenv.py  gate1_compare.py  gate1_diff_compare.py  gate1_diff_prepare.py  gate1_diff_run_orig.py  gate1_diff_run_ours.py  gate1_prepare.py  gate1_run_ours.py  gate1_sovits_v2_compare.py  gate1_sovits_v2_prepare.py  gate1_sovits_v2_run_orig.py  gate1_sovits_v2_run_ours.py  gate1_vocoder_compare.py  gate1_vocoder_prepare.py  gate1_vocoder_run_orig.py  gate1_vocoder_run_ours.py  gate_aug0_driver.py  gate_aug0_noop.py  gate_aug_pipeline.py  gate_aug_semantic.py  gate_aug_semantic_dist.json  gate_spkmix_sovits_v2.py  regress_extract_sovits.py  smoke_aug.py
converter/verify/voice/: README.md  e2e_quality_ref.py  e2e_sovits_v2_ref.py  gate1_diffusion.py  gate1_nsf_hifigan.py  gate1_sovits_v2.py  gate_autof0.py
docs/: user-guide.en.md  user-guide.ja.md  user-guide.zh-CN.md
scripts/: gen-installer-art.ps1  release.ps1  verify-install.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/utai-dsp/: Cargo.toml
src-tauri/crates/utai-dsp/src/: demucs.rs  lib.rs  psola.rs  stft.rs  tempo.rs
src-tauri/crates/utai-stretch/: Cargo.toml  build.rs
src-tauri/crates/utai-stretch/src/: lib.rs  wrapper.cpp
src-tauri/examples/: ort_cuda_test.rs
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh
src-tauri/src/: crashlog.rs  download.rs  gpu.rs  lib.rs  logging.rs  main.rs  portable.rs  util.rs
src-tauri/src/audio/: effects.rs  export.rs  mod.rs  resample.rs
src-tauri/src/commands/: assets.rs  audio.rs  audition.rs  export_audio.rs  export_score.rs  import.rs  inference.rs  logs.rs  midi_extract.rs  mod.rs  models.rs  msst_models.rs  ou_pitch.rs  project.rs  pyenv.rs  separation.rs  settings.rs  storage.rs  training.rs  update.rs  window.rs
src-tauri/src/inference/: autotune.rs  diffusion.rs  engine.rs  f0.rs  features.rs  g2p.rs  g2p_golden_ref.rs  g2p_tables.rs  mel.rs  midi_extract.rs  mod.rs  nsf_hifigan.rs  rvc.rs  s2h.rs  score2cv.rs  score2cv_tables.rs  score2svc.rs  score2svc_e1.rs  score2svc_ref.rs  sovits.rs  vocal_range.rs
src-tauri/src/models/: cache.rs  convert.rs  mod.rs
src-tauri/src/project/: autosave.rs  mod.rs  undo.rs
src-tauri/src/pyenv/: mod.rs
src-tauri/src/separation/: mod.rs  pipeline.rs  sidecar.rs  stft.rs
src-tauri/src/training/: augment.rs  mod.rs  sidecar.rs
src-tauri/tests/: audition_render.rs  autotune_parity.rs  download_http.rs  e5_breathy_probe.rs  game_batch.rs  game_parity.rs  onnx_inference.rs  psola_ab.rs  pyenv_extract_gates.rs  pyenv_pack.rs  separation_pipeline.rs  tempo_oracle.rs  vocoder_import.rs  voice_mem_profile.rs  voice_pipeline.rs
src-tauri/tests/fixtures/: autotune_parity.json
src/components/common/: ConfirmDialog.css  ConfirmDialog.tsx  ContextMenu.css  ContextMenu.tsx  ExportAudioDialog.tsx  ExportScoreDialog.tsx  HistoryBanner.css  HistoryBanner.tsx  LogViewer.css  LogViewer.tsx  MissingModelsDialog.css  MissingModelsDialog.tsx  PanelResizeHandles.css  PanelResizeHandles.tsx  Scrubber.css  Scrubber.tsx  Settings.css  Settings.tsx  Titlebar.css  Titlebar.tsx  Toast.css  Toast.tsx  UpdateDialog.tsx  VolumeFader.css  VolumeFader.tsx  previewPlayer.ts
src/components/models/: MsstModelManager.css  MsstModelManager.tsx
src/components/synth/: Arrangement.css  Arrangement.tsx  AutoTuneWatcher.tsx  DawView.css  DawView.tsx  DawWorkflowSplit.css  DawWorkflowSplit.tsx  HScrollbar.tsx  OverviewMap.tsx  TempoStretchPanel.css  TempoStretchPanel.tsx  TimelineRuler.tsx  Toolbar.css  Toolbar.tsx  TrackList.css  TrackList.tsx  VocalEditor.css  VocalEditor.tsx  VocalSidebar.css  VocalSidebar.tsx
src/components/training/: LossChart.tsx  TrainingPage.css  TrainingPage.tsx  TrainingPanel.css  TrainingPanel.tsx
src/components/workflow/: NodePalette.css  NodePalette.tsx  RenderLinkWatcher.tsx  WorkflowEditor.css  WorkflowEditor.tsx
src/i18n/: en.json  index.ts  ja.json  zh.json
src/lib/: backendError.ts  canvasDraw.ts  clipboard.test.ts  clipboard.ts  constants.ts  errorDisplay.ts  exitFlow.ts  f0eval.test.ts  f0eval.ts  interpolateShape.ts  laneEdit.ts  log.ts  settings.ts  snapping.ts  startupCheck.ts  timeAxis.ts  trackColors.ts  trackLayout.ts  update.ts  useDraggable.ts  useFloatingPanel.ts  vocalGeometry.ts  vocalNotes.ts  waveformCache.ts
src/lib/audio/: exportAudio.ts  exportMixdown.ts  import.ts  laneOps.ts  playback.ts  stretchCache.ts  tempoDetect.test.ts  (+1 more)
src/store/: app.ts  audio.ts  history.ts  logs.ts  msst-models.ts  project.ts  training.ts  vocalData.test.ts  voice-models.ts  workflow.ts
src/styles/: global.css  theme.css
src/types/: project.ts
training/: requirements.txt
training/common/: augment.py  index_gen.py  progress.py  stop_signal.py
training/packs/: build_pack.py
training/rvc/: train.py
training/sovits/: train.py
training/utai_train/: audio.py  augment.py  device.py  envtest.py  protocol.py  runner.py  stopfile.py
(+105 files in other folders)
