[workspace]
members = ["crates/utai-dsp"]

[package]
name = "utai"
version = "2.0.0-alpha.1"
description = "UTAI — Voice Synthesis DAW"
authors = ["UTAI Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "utai_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "preload-dylibs"] }
ndarray = "0.16"
ndarray-npy = "0.9"
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "vorbis", "pcm", "wav", "aac", "isomp4", "mkv"] }
rubato = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
rustfft = "6.2"
rayon = "1.10"
zip = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
# S42 embedded-runtime packs: sha256 part verification + .tar.zst pack extraction
sha2 = "0.10"
tar = "0.4"
zstd = "0.13"
rand = "0.8"
rand_distr = "0.4"
utai-dsp = { path = "crates/utai-dsp" }

# Windows-only: disable WebView2 browser-accelerator keys (Ctrl+F/P, F5/F7, zoom, reload…) natively — a
# page-level keydown preventDefault can't stop them (they're handled by the WebView2 host above the DOM).
# Versions pinned to what Tauri 2 already resolves (Cargo.lock) so the COM interface types match.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = "0.61"

[features]
custom-protocol = ["tauri/custom-protocol"]

# The separation hot loops live in utai-dsp precisely so dev builds can run them at
# opt-3 without slowing the app crate's incremental compiles. S32 measured opt-0 DSP
# at 10-30x the wall time of release on the conv-arch pipelines (dev htdemucs 380s vs
# release 12s per 120s of audio). The per-dependency overrides below do NOT cover
# ndarray-indexing loops in opt-0 caller crates (monomorphization happens in the
# calling crate) — that is WHY the sub-crate exists.
[profile.dev.package.utai-dsp]
opt-level = 3
# The ort BINDING layer (Value construction / output extraction) sits on the per-chunk
# path too — at opt-0 it added ~250 ms per htdemucs segment (S32: dev "inference"
# 350 ms/seg vs release 94 ms/seg on identical GPU work).
[profile.dev.package.ort]
opt-level = 3
[profile.dev.package.ort-sys]
opt-level = 3
[profile.dev.package.rustfft]
opt-level = 3
[profile.dev.package.ndarray]
opt-level = 3
# ndarray's f32 matmul (RVC KNN retrieval / RMVPE mel projection in the voice pipeline)
# dispatches into matrixmultiply — the gemm kernels live THERE, so this override (unlike
# generic ndarray indexing) actually covers the hot loop in dev builds.
[profile.dev.package.matrixmultiply]
opt-level = 3
[profile.dev.package.num-complex]
opt-level = 3
[profile.dev.package.rayon]
opt-level = 2
[profile.dev.package.rayon-core]
opt-level = 2

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
